powerpc: Use LE for skiroot & openpower configs
Signed-off-by: Jeremy Kerr <jk@ozlabs.org>

--- a/arch/powerpc/configs/openpower_defconfig
+++ b/arch/powerpc/configs/openpower_defconfig
@@ -3,6 +3,7 @@ CONFIG_ALTIVEC=y
 CONFIG_VSX=y
 CONFIG_SMP=y
 CONFIG_NR_CPUS=2048
+CONFIG_CPU_LITTLE_ENDIAN=y
 # CONFIG_SWAP is not set
 CONFIG_SYSVIPC=y
 CONFIG_POSIX_MQUEUE=y
